# fft_comparison

./: .gitignore  .gitmodules  CMakeLists.txt  config.hpp  main.cpp
cmake/: CMakeFFTWConfig.txt  downloadFindFFTW.cmake.in
fft/: cpu_fft.h  fft.hpp  fft_traits.hpp  runner.hpp
fft/bealto/: bealto.hpp  bealto_first.hpp
fft/edp/: edp.cpp  edp.hpp  edp_first.hpp  edp_second.hpp  edp_third.hpp
fft/fftw/: fftw.cpp  fftw.hpp  fftw_first.hpp
fft/ibb/: ibb.cpp  ibb.hpp  ibb_first.hpp  ibb_second.hpp  ibb_third.hpp
fft/kissfft/: kissfft.cpp  kissfft.hpp  kissfft_first.hpp
fft/springer/: springer.hpp  springer_first.hpp
utils/: system_detail.hpp  utils.cpp  utils.h
